# mkdocs-bpmn

./: LICENSE  README.md  pyproject.toml
mkdocs_bpmn/: __init__.py  elements.py  plugin.py
