[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mkdocs-bpmn"
version = "0.1.0rc4"
description = "A plugin for embedding BPMN diagrams in MkDocs"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Maksym Ivanchenko", email = "github@ivanchenko.io"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Documentation",
    "Topic :: Text Processing",
]
dependencies = [
    "mkdocs>=1.3.0",
    "lxml>=5.3.0"
]

[project.entry-points."mkdocs.plugins"]
bpmn = "mkdocs_bpmn:BpmnPlugin"
